[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/main/enemys/air/dmg-15-7.png" type="Texture" id=1]
[ext_resource path="res://scenes/main/enemys/air/FloatingEnemy1.gd" type="Script" id=2]

[node name="FloatingEnemy1" type="StaticBody2D"]
scale = Vector2( 0.5, 0.5 )
collision_layer = 8192
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="ShellDrop" type="Position2D" parent="."]

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -15, -13, 15, -13, 27, 2, 24, 8, 9, 14, -9, 14, -24, 8, -28, 2 )

[node name="PlayerDetector" type="Area2D" parent="."]
scale = Vector2( 1.1, 1.1 )
collision_layer = 8192

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="PlayerDetector"]
polygon = PoolVector2Array( -15, -13, 15, -13, 27, 2, 24, 8, 9, 14, -9, 14, -24, 8, -28, 2 )

[node name="BulletDetector" type="Area2D" parent="."]
collision_layer = 8192
collision_mask = 1024

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="BulletDetector"]
scale = Vector2( 1.1, 1.1 )
polygon = PoolVector2Array( -15, -13, 15, -13, 27, 2, 24, 8, 9, 14, -9, 14, -24, 8, -28, 2 )

[node name="EnemyHitSound" type="AudioStreamPlayer" parent="BulletDetector"]
volume_db = -30.0

[node name="PlayerSquashDetector" type="Area2D" parent="."]
collision_layer = 8192

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="PlayerSquashDetector"]
position = Vector2( -3.55271e-15, 9.28571 )
polygon = PoolVector2Array( -30.3571, -9.64284, -26.0714, -2.49998, -9.64285, 3.92859, 9.64286, 3.92859, 26.7857, -3.21427, 30.3571, -9.64284 )

[connection signal="body_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
[connection signal="area_entered" from="BulletDetector" to="." method="_on_BulletDetector_area_entered"]
[connection signal="body_entered" from="PlayerSquashDetector" to="." method="_on_PlayerSquashDetector_body_entered"]
